Add buttons to weapons

--- a/ShadowrunAnarchy/ShadowrunAnarchy.html
+++ b/ShadowrunAnarchy/ShadowrunAnarchy.html
@@ -282,7 +282,9 @@
 			<!-- Unarmed Boxs-->
 				<div class="unarmedbox toggle">
 					<div class="unarmedheader">
-						<h4 data-i18n="unarmed">UNARMED</h4>
+						<button name="Weapon" type="roll" value="@{gm_toggle} &{template:sAnarchy}{{header=^{unarmed}}}{{desc=@{unarmed_dmg}}}">
+							<h4 data-i18n="unarmed">UNARMED</h4>
+						</button>
 					</div>
 					<div class="unarmeddamagebox">
 						<div class="weaponlabels"><label>DAM</label></div>
@@ -329,7 +331,10 @@
 						</div>
 						<div class="display weapondamagebox">
 							<div class="weaponheader">
-								<span name="attr_weapon_name"></span><br />
+								<button name="Weapon" type="roll" value="@{gm_toggle} &{template:sAnarchy}{{header=@{weapon_name}}}{{desc=@{weapon_type}, @{weapon_dmg}}}">
+									<span name="attr_weapon_name"></span>
+								</button>
+								<br />
 								<span name="attr_weapon_type"></span>
 							</div>
 							<div class="weaponbody">
