RatasEnLasParedes: minor fix

--- a/RatasEnLasParedes/RatasEnLasParedes.html
+++ b/RatasEnLasParedes/RatasEnLasParedes.html
@@ -12,7 +12,7 @@
 		<div class="sheet-separatorVerticalGrande">
 		    <label class="sheet-label">REPUTACION:</label><input class="sheet-center" type="text" name="attr_character_reputation" style="width: 50%;"><br/>
 		</div>
-	
+
 	</div>
 	<div class="sheet-derecha">
 		<div class="sheet-separatorVerticalGrande2">
@@ -21,7 +21,7 @@
 	</div>
 
 <br>
-	
+
 	<div class="sheet-izquierda">
 	    <div class="sheet-separatorVertical">
 		<label class="sheet-label">DESTREZA:</label><input name="attr_des" title="@{des}" style="margin-left: 11px; width: 10%;" type="number" value="0" min="0">
@@ -64,18 +64,18 @@
 		</div>
 		</div>
 	</div>
-	    <div class="sheet-section-Armas">		
+	    <div class="sheet-section-Armas">
 			<label class="sheet-labelCentral">DAÑO</label>
 			<br/>
 			<h4>
 			<label class="sheet-labelPeque">Armas 1 Mano</label>
-			<button name="roll_1D6" class="sheet-blank-roll-button" type="roll" value="/me rolls ARMAS A 1 MANO [[{1d6}]]"><span style="font-family: 'dicefontd6'">L</button>
-			<label class="sheet-labelPeque">Armas 2 Manos</span></label>
-			<button name="roll_2D6" class="sheet-blank-roll-button" type="roll" value="/me rolls ARMAS A 2 MANOS [[{2d6}]]"><span style="font-family: 'dicefontd6'">Lf</button>
-			<label class="sheet-labelPeque">Armas Grandes</span></label>
-			<button name="roll_3D6" class="sheet-blank-roll-button" type="roll" value="/me rolls ARMAS GRANDES [[{3d6}]]"><span style="font-family: 'dicefontd6'">LfL</button>
+			<button name="roll_1D6" class="sheet-blank-roll-button" type="roll" value="/me rolls ARMAS A 1 MANO [[{1d6}]]"><span style="font-family: 'dicefontd6'">L</span></button>
+			<label class="sheet-labelPeque">Armas 2 Manos</label>
+			<button name="roll_2D6" class="sheet-blank-roll-button" type="roll" value="/me rolls ARMAS A 2 MANOS [[{2d6}]]"><span style="font-family: 'dicefontd6'">Lf</span></button>
+			<label class="sheet-labelPeque">Armas Grandes</label>
+			<button name="roll_3D6" class="sheet-blank-roll-button" type="roll" value="/me rolls ARMAS GRANDES [[{3d6}]]"><span style="font-family: 'dicefontd6'">LfL</span></button>
 			</h4>
-			</br>
+			<br>
 		</div>
 	<div class="sheet-izquierda">
 		<div class="sheet-section-recursos2">
@@ -83,14 +83,14 @@
 		<textarea name="attr_resources"></textarea>
 		</div>
 		<div class="sheet-section-hechizos">
-		<label class="sheet-label">HECHIZOS</label>           
-		<textarea name="attr_spells"></textarea>        
+		<label class="sheet-label">HECHIZOS</label>
+		<textarea name="attr_spells"></textarea>
 		</div> <!-- .section-hechizos -->
 	</div>
 	<div class="sheet-derecha">
 		<div class="sheet-section-armasEquipo">
 		<label class="sheet-label">ARMAS Y EQUIPO</label>
-	    <textarea name="attr_armaequipo"></textarea>       
+	    <textarea name="attr_armaequipo"></textarea>
 		</div> <!-- .section-armasEquipo -->
 		<div class="sheet-separatorVertical">
 		<div class="sheet-section-cicatrices">
