--- a/ShadowrunAnarchy/ShadowrunAnarchy.html
+++ b/ShadowrunAnarchy/ShadowrunAnarchy.html
@@ -24,7 +24,7 @@
 	<!-- ~~~~~~~~ Attribute  ~~~~~~~~ -->
 		<div class="tan attribute">
 			<div class="sheet-col">
-				<button name="Strength" type='roll' value="@{gm_toggle} &{template:sAnarchy}{{header=^{strength}}}{{attr=^{attribute}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}@{modifier_toggle}{{edge=[[@{edge_toggle}]]}}{{dice=[[(@{strength})+(@{attribute_roll})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>@{edge_threshold}]]}}" title="Strength Roll"><h1 data-i18n="strength">STRENGTH</h1></button>
+				<button name="Strength" type='roll' value="@{gm_toggle} &{template:sAnarchy}{{header=^{strength}}}{{attr=^{attribute}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}@{modifier_toggle}{{edge=[[@{edge_toggle}]]}}{{dice=[[(@{strength}+(@{attribute_roll})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>@{edge_threshold}]]}}" title="Strength Roll"><h1 data-i18n="strength">STRENGTH</h1></button>
 				<input type="number" name="attr_strength" value="1" title="@{strength}" />
 			</div>
 			<div class="vertdeco"></div>
@@ -282,7 +282,9 @@
 			<!-- Unarmed Boxs-->
 				<div class="unarmedbox toggle">
 					<div class="unarmedheader">
-						<h4 data-i18n="unarmed">UNARMED</h4>
+						<button name="Weapon" type="roll" value="@{gm_toggle} &{template:sAnarchy}{{header=^{unarmed}}}{{desc=@{unarmed_dmg}}}">
+							<h4 data-i18n="unarmed">UNARMED</h4>
+						</button>
 					</div>
 					<div class="unarmeddamagebox">
 						<div class="weaponlabels"><label>DAM</label></div>
@@ -329,7 +331,10 @@
 						</div>
 						<div class="display weapondamagebox">
 							<div class="weaponheader">
-								<span name="attr_weapon_name"></span><br />
+								<button name="Weapon" type="roll" value="@{gm_toggle} &{template:sAnarchy}{{header=@{weapon_name}}}{{desc=@{weapon_type}, @{weapon_dmg}}}">
+									<span name="attr_weapon_name"></span>
+								</button>
+								<br />
 								<span name="attr_weapon_type"></span>
 							</div>
 							<div class="weaponbody">
@@ -940,7 +945,7 @@
 <!-- Hidden Inputs -->
 <input type="hidden" class="npc-toggle" name="attr_npc_toggle" />
 <input type="hidden" name="attr_attribute_roll" value="?{Attribute|Strength,@{strength}|Agility,@{agility}|Willpower,@{willpower}|Logic,@{logic}|Charisma,@{charisma}|Edge,@{edge}|None,0}" />
-<input type="hidden" name="attr_version" value="1.9" />
+<input type="hidden" name="attr_version" value="1.91" />
 
 <!-- Footer -->
 <div class="footer">
