Revert "[Call of Cthulhu 7th Ed] Adding ''NPC Sheet'' and minor additions. (#5086)"
This reverts commit dfe9e25a17487ec2a86128049dcfc68ec96d423f.

--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -3,7 +3,7 @@
     <input class="sheet-HideConfig" type="checkbox" checked name="attr_is_config"/><span class="sheet-is-config"><span style='font-family:"Pictos";'>y</span></span>
     <div class="sheet-config" style="text-align:left">
         <div style="text-align:left"><b>Era Selection</b></div>
-	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="7"><span style="display:none">Invictus</span>
+	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="7"><span style="display:none">Invictuss</span>
 	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="1"><span style="display:none">Dark Ages</span>
 	    <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="5"><span style="display:none">Old West</span>
 	    <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="2" checked="checked"><span style="display:none">1920's</span>
@@ -34,15 +34,11 @@
 	    <div>
 	        <input type="checkbox" class="sheet-toggledr" name="attr_toggledr" value="1">Common Dice Rolls
 	        <input type="checkbox" class="sheet-togglearmor" name="attr_togglearmor" value="1">Armor
-	    </div>
-	    <div>
-	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">NPCs(Companions,Mounts,etc)
-	        <input type="checkbox" class="sheet-hide" name="attr_sheet-hide">Hide Sheet
+	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">Companions & Mounts
 	    </div>
     </div>
 </div>
 
-<input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
 <!------------------------- Char Info and Characteristics ------------------------->
 <div class='sheet-2colrow'>
     <div class='sheet-col'>
@@ -3737,9 +3733,7 @@
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
-    <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <h4 class="section-head" data-i18n="combat-u">Combat</h4>
-    <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <div class="section">
 
 <!------------------------- Invictus Combat ------------------------->
@@ -4694,7 +4688,7 @@
     </div>
 </div>
 
-<!------------------------- Companions (NPCs)------------------------->
+<!------------------------- Companions ------------------------->
 <div class='sheet-colrow'>
     <input type="checkbox" class="sheet-togglecompanions" style="display:none" name="attr_togglecompanions" value="1">
     <div class="sheet-companions">
@@ -4706,7 +4700,7 @@
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
-    <h4 class="section-head" data-i18n="companions&mounts-u">NPCs</h4>
+    <h4 class="section-head" data-i18n="companions&mounts-u">Companions & Mounts</h4>
 		<div class="sheet-section">
 		    <fieldset class="repeating_minion">
 		        <div class="sheet-row">
