--- a/Ars_Magica_5th/Ars_Magica_5th.html
+++ b/Ars_Magica_5th/Ars_Magica_5th.html
@@ -1204,11 +1204,11 @@
                 <tr>
                     <th><input type="text" class="sheet-heading_3" name="attr_Weapon_name"/></th>
 
-                    <td><button type="roll" class="sheet-button" name="roll_weapon_Init" value="&{template:initiative} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{roll= [[ @{Init} + 1d10 + @{wound_total} + @{Fatigue} + (?{Initiative Modifiers|0}]]) }}">Init</button></td>
+                    <td><button type="roll" class="sheet-button" name="roll_weapon_Init" value="&{template:initiative} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{roll= [[ @{Init} + 1d10 + @{wound_total} + @{Fatigue} + (?{Initiative Modifiers|0})]] }}">Init</button></td>
                     <td><input type="text" class="sheet-number_1" name="attr_Init" value="(@{Quickness_Score} + @{Init_Weap} - @{Init_Enc})" disabled="true"/></td>
-                    <td><button type="roll" class="sheet-button" name="roll_weapon_Atk" value="&{template:attack} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{attack= [[ @{Atk} + 1d10 + @{wound_total} + @{Fatigue} + (?{Circumstantial Attack|0}]]) }} {{damage= [[ (@{Strength_Score}) + (@{Dam_Weap}) + (?{Circumstantial Damage|0})]]}} ">Atk</button></td>
+                    <td><button type="roll" class="sheet-button" name="roll_weapon_Atk" value="&{template:attack} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{attack= [[ @{Atk} + 1d10 + @{wound_total} + @{Fatigue} + (?{Circumstantial Attack|0})]] }} {{damage= [[ (@{Strength_Score}) + (@{Dam_Weap}) + (?{Circumstantial Damage|0})]]}} ">Atk</button></td>
                     <td><input type="text" class="sheet-number_1" name="attr_Atk" value="(@{Dexterity_Score} + @{WeaponAbility} + @{Atk_Weap})" disabled="true"/></td>
-                    <td><button type="roll" class="sheet-button" name="roll_weapon_Dfn" value="&{template:attack} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{defend= [[ @{Dfn} + 1d10 + @{wound_total} + @{Fatigue} + (?{Circumstantial Defense|0}]]) }}">Dfn</button></td>
+                    <td><button type="roll" class="sheet-button" name="roll_weapon_Dfn" value="&{template:attack} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{defend= [[ @{Dfn} + 1d10 + @{wound_total} + @{Fatigue} + (?{Circumstantial Defense|0})]] }}">Dfn</button></td>
 
                     <td><input type="text" class="sheet-number_1" name="attr_DFN" value="(@{Quickness_Score} + @{WeaponAbility} + @{Dfn_Weap})" disabled="true"/></td>
                     <td><div style="width:10px;"></div></td>
