moved crit injuries

--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -137,25 +137,29 @@
         </div>        
         <div class="box character-injuries">
 			<div class="injuries-grid">
-				<div class="injuries-box1 header"><h1 data-i18n="critical-u">CRITICAL INJURIES</h1></div>
-                <div class="injuries-box2 column-header"><span data-i18n="injury">Injury</span></div>
-                <div class="injuries-box3 column-header"><span data-i18n="lethal">Lethal</span></div>
-                <div class="injuries-box4 column-header"><span data-i18n="time-limit">Time Limit</span></div>
-                <div class="injuries-box5 column-header"><span data-i18n="effects">Effects</span></div>
-                <div class="injuries-box6 column-header"><span data-i18n="healing-time">Healing Time</span></div>		
+				<div class="injuries-box1 header">
+                    <h1 data-i18n="critical-u">CRITICAL INJURIES</h1>
+                </div>		
                 <div class="injuries-box7">
                     <fieldset class="repeating_injuries">
-                        <div class="injuries-grid">
-                            <input type="text" class="injuries-box8 input" name="attr_injury_name" value="" title="@{repeating_injuries_$X_injury_name}" />
-                            <select class="injuries-box9 input" name="attr_injury_lethal" title="@{repeating_injuries_$X_injury_lethal}">
-                                <option value="no" data-i18n="no" selected>No</option>
-                                <option value="yes" data-i18n="yes">Yes</option>
-                                <option value="yes -1" data-i18n="yes-1">Yes,-1</option>
-                                <option value="n/a" data-i18n="not-applicable-abbr">n/a</option>
-                            </select>
-                            <input type="text" class="injuries-box10 input" name="attr_injury_time_limit" value="n/a" title="@{repeating_injuries_$X_injury_time_limit}" />
-                            <input type="text" class="injuries-box11 input" name="attr_injury_effects" value="" title="@{repeating_injuries_$X_injury_effects}" />
-                            <input type="text" class="injuries-box12 input" name="attr_injury_healing_time" value="n/a" title="@{repeating_injuries_$X_injury_healing_time}" />
+                        <div class="settings">
+                            <div class="injuries-grid">
+                                <label class="injuries-box2">Injury</label>
+                                <input type="text" class="injuries-box8 input" name="attr_injury_name" value="" title="@{repeating_injuries_$X_injury_name}" />
+                                <label class="injuries-box3">Lethal</label>
+                                <select class="injuries-box9 input" name="attr_injury_lethal" title="@{repeating_injuries_$X_injury_lethal}">
+                                    <option value="no" data-i18n="no" selected>No</option>
+                                    <option value="yes" data-i18n="yes">Yes</option>
+                                    <option value="yes -1" data-i18n="yes-1">Yes,-1</option>
+                                    <option value="n/a" data-i18n="not-applicable-abbr">n/a</option>
+                                </select>
+                                <label class="injuries-box4 ">Time Limit</label>
+                                <input type="text" class="injuries-box10 input" name="attr_injury_time_limit" value="n/a" title="@{repeating_injuries_$X_injury_time_limit}" />
+                                <label class="injuries-box5">Effects</label>
+                                <input type="text" class="injuries-box11 input" name="attr_injury_effects" value="" title="@{repeating_injuries_$X_injury_effects}" />
+                                <label class="injuries-box6">Healing Time</label>
+                                <input type="text" class="injuries-box12 input" name="attr_injury_healing_time" value="n/a" title="@{repeating_injuries_$X_injury_healing_time}" />
+                            </div>
                         </div>
                     </fieldset>
                 </div>
