--- a/Knight/knight.html
+++ b/Knight/knight.html
@@ -10551,7 +10551,7 @@ Effet : L’arme reçoit un bonus de 3 permanent aux dégâts qu’elle inflige.
 			</div>
 			<div class="sheet-col">
 				<div class="fichePJ">
-					<div class="limiteArmure mainBlock3Way Separation Bard Druid Monk Barbarian Necromancer Paladin Priest Psion Ranger Rogue Sorcerer Warmaster Warrior Wizard">
+					<div class="limiteArmure mainBlock3Way Separation Guardian Bard Druid Monk Barbarian Necromancer Paladin Priest Psion Ranger Rogue Sorcerer Warmaster Warrior Wizard">
 						<div>
 							<h4 class="titre">Nods</h4>
 						</div>
@@ -12890,21 +12890,21 @@ Effet : L’arme reçoit un bonus de 3 permanent aux dégâts qu’elle inflige.
 						<div class="2Way">
 							<select name="attr_caracteristique1Grenade">
 								<option value="{{bonusWarrOD1=[[0]]}} {{bonusBarb1=[[0]]}}  {{OD1=[[0]]}} {{jet=[[ [[{ [[0+" selected></option>
-								<option value="{{carac1=Déplacement}} {{bonusWarrOD1=[[@{warriorSoldierA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{deplOD}]]}} {{jet=[[ [[{ [[@{deplacement}+">Déplacement</option>
-								<option value="{{carac1=Force}} {{bonusWarrOD1=[[@{warriorSoldierA}]]}} {{bonusBarb1=[[@{barbarianGoliath}]]}} {{OD1=[[@{forOD}]]}} {{jet=[[ [[{ [[@{force}+">Force</option>
-								<option value="{{carac1=Endurance}} {{bonusWarrOD1=[[@{warriorSoldierA}]]}} {{bonusBarb1=[[@{barbarianGoliath}]]}} {{OD1=[[@{endOD}]]}} {{jet=[[ [[{ [[@{endurance}+">Endurance</option>
-								<option value="{{carac1=Hargne}} {{bonusWarrOD1=[[@{warriorHunterA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{hargneOD}]]}} {{jet=[[ [[{ [[@{hargne}+">Hargne</option>
-								<option value="{{carac1=Combat}} {{bonusWarrOD1=[[@{warriorHunterA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{combOD}]]}} {{jet=[[ [[{ [[{@combat}+">Combat</option>
-								<option value="{{carac1=Instinct}} {{bonusWarrOD1=[[@{warriorHunterA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{instOD}]]}} {{jet=[[ [[{ [[@{instinct}+">Instinct</option>
-								<option value="{{carac1=Tir}} {{bonusWarrOD1=[[@{warriorScholarA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{tirOD}]]}} {{jet=[[ [[{ [[@{tir}+">Tir</option>
-								<option value="{{carac1=Savoir}} {{bonusWarrOD1=[[@{warriorScholarA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{savoirOD}]]}} {{jet=[[ [[{ [[@{savoir}+">Savoir</option>
-								<option value="{{carac1=Technique}} {{bonusWarrOD1=[[@{warriorScholarA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{technOD}]]}} {{jet=[[ [[{ [[@{technique}+">Technique</option>
-								<option value="{{carac1=Aura}} {{bonusWarrOD1=[[@{warriorHeraldA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{auraOD}]]}} {{jet=[[ [[{ [[@{aura}+">Aura</option>
-								<option value="{{carac1=Parole}} {{bonusWarrOD1=[[@{warriorHeraldA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{paroleOD}]]}} {{jet=[[ [[{ [[@{parole}+">Parole</option>
-								<option value="{{carac1=Sang-Froid}} {{bonusWarrOD1=[[@{warriorHeraldA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{sfOD}]]}} {{jet=[[ [[{ [[@{sf}+">Sang-Froid</option>
-								<option value="{{carac1=Discrétion}} {{bonusWarrOD1=[[@{warriorScoutA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{discrOD}]]}} {{jet=[[ [[{ [[@{discretion}+">Discrétion</option>
-								<option value="{{carac1=Perception}} {{bonusWarrOD1=[[@{warriorScoutA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{percOD}]]}} {{jet=[[ [[{ [[@{perception}+">Perception</option>
-								<option value="{{carac1=Dextérité}} {{bonusWarrOD1=[[@{warriorScoutA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{dextOD}]]}} {{jet=[[ [[{ [[@{dexterite}+">Dextérité</option>
+								<option value="{{carac1=Déplacement}} {{bonusWarrOD1=[[@{warriorSoldierA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{deplOD}]]}} {{jet=[[{ [[{ [[@{deplacement}+">Déplacement</option>
+								<option value="{{carac1=Force}} {{bonusWarrOD1=[[@{warriorSoldierA}]]}} {{bonusBarb1=[[@{barbarianGoliath}]]}} {{OD1=[[@{forOD}]]}} {{jet=[[{ [[{ [[@{force}+">Force</option>
+								<option value="{{carac1=Endurance}} {{bonusWarrOD1=[[@{warriorSoldierA}]]}} {{bonusBarb1=[[@{barbarianGoliath}]]}} {{OD1=[[@{endOD}]]}} {{jet=[[{ [[{ [[@{endurance}+">Endurance</option>
+								<option value="{{carac1=Hargne}} {{bonusWarrOD1=[[@{warriorHunterA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{hargneOD}]]}} {{jet=[[{ [[{ [[@{hargne}+">Hargne</option>
+								<option value="{{carac1=Combat}} {{bonusWarrOD1=[[@{warriorHunterA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{combOD}]]}} {{jet=[[{ [[{ [[{@combat}+">Combat</option>
+								<option value="{{carac1=Instinct}} {{bonusWarrOD1=[[@{warriorHunterA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{instOD}]]}} {{jet=[[{ [[{ [[@{instinct}+">Instinct</option>
+								<option value="{{carac1=Tir}} {{bonusWarrOD1=[[@{warriorScholarA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{tirOD}]]}} {{jet=[[{ [[{ [[@{tir}+">Tir</option>
+								<option value="{{carac1=Savoir}} {{bonusWarrOD1=[[@{warriorScholarA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{savoirOD}]]}} {{jet=[[{ [[{ [[@{savoir}+">Savoir</option>
+								<option value="{{carac1=Technique}} {{bonusWarrOD1=[[@{warriorScholarA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{technOD}]]}} {{jet=[[{ [[{ [[@{technique}+">Technique</option>
+								<option value="{{carac1=Aura}} {{bonusWarrOD1=[[@{warriorHeraldA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{auraOD}]]}} {{jet=[[{ [[{ [[@{aura}+">Aura</option>
+								<option value="{{carac1=Parole}} {{bonusWarrOD1=[[@{warriorHeraldA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{paroleOD}]]}} {{jet=[[{ [[{ [[@{parole}+">Parole</option>
+								<option value="{{carac1=Sang-Froid}} {{bonusWarrOD1=[[@{warriorHeraldA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{sfOD}]]}} {{jet=[[{ [[{ [[@{sf}+">Sang-Froid</option>
+								<option value="{{carac1=Discrétion}} {{bonusWarrOD1=[[@{warriorScoutA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{discrOD}]]}} {{jet=[[{ [[{ [[@{discretion}+">Discrétion</option>
+								<option value="{{carac1=Perception}} {{bonusWarrOD1=[[@{warriorScoutA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{percOD}]]}} {{jet=[[{ [[{ [[@{perception}+">Perception</option>
+								<option value="{{carac1=Dextérité}} {{bonusWarrOD1=[[@{warriorScoutA}]]}} {{bonusBarb1=[[0]]}} {{OD1=[[@{dextOD}]]}} {{jet=[[{ [[{ [[@{dexterite}+">Dextérité</option>
 							</select>
 							<select name="attr_caracteristique2Grenade">
 								<option value="0]], 0}kh1]]d6cs2cs4cs6cf1cf3cf5s%2}=0]]}} {{OD2=[[0]]}} {{bonusWarrOD2=[[0]]}} {{bonusBarb2=[[0]]}}" selected></option>
