Star Wars D6: remove wound penalties from soak rolls

--- a/D6StarWars/D6StarWars.html
+++ b/D6StarWars/D6StarWars.html
@@ -290,12 +290,12 @@
 					<input type="number" name="attr_armorPhDice" class="smallnumber shortnumber" min="0" value="1"/>D+<input type="number" name="attr_armorPhPip" class="pipnumber shortnumber" min="0" max="2" value="0"/>
 					<input type="number" name="attr_armorEnDice" class="smallnumber shortnumber" min="0" value="1"/>D+<input type="number" name="attr_armorEnPip" class="pipnumber shortnumber" min="0" max="2" value="0"/>
 					<input class="skilltext" type="text" name="attr_armor_other"/>
-					<button class="d6-dice" name="roll_dmg_soak_en" type="roll" value="&{template:red} {{name=Damage Soak(Physical)}} {{Roll=[[(@{strength} +@{armorPhDice} -@{WoundMod} -1)d6cf0cs0 +@{armorPhPip} +1d6!cf1cs6]]}}">Physical</button>
-					<button class="d6-dice" name="roll_dmg_soak_ph" type="roll" value="&{template:red} {{name=Damage Soak(Energy)}} {{Roll=[[(@{strength} +@{armorEnDice} -@{WoundMod} -1)d6cf0cs0 +@{armorEnPip} +1d6!cf1cs6]]}}">Energy</button>
-					<button class="d6-dice" name="roll_dmg_soak_str" type="roll" value="&{template:red} {{name=Damage Soak(Strength only)}} {{Roll=[[(@{strength} -@{WoundMod} -1)d6cf0cs7 +1d6!cf1cs6]]}}">Str only</button>	  
-					<button class="d6-dice gmroll gmroll-hide" name="rollg_dmg_soak_en" type="roll" value="/w gm &{template:red} {{name=Damage Soak(Physical)}} {{Roll=[[(@{strength} +@{armorPhDice} -@{WoundMod} -1)d6cf0cs0 + @{armorPhPip} + 1d6!cf1cs6]]}}"><span class="redtxt">GM</span>P</button>
-					<button class="d6-dice gmroll gmroll-hide" name="rollg_dmg_soak_ph" type="roll" value="/w gm &{template:red} {{name=Damage Soak(Energy)}} {{Roll=[[(@{strength} +@{armorEnDice} -@{WoundMod} -1)d6cf0cs0 + @{armorEnPip} + 1d6!cf1cs6]]}}"><span class="redtxt">GM</span>E</button>
-					<button class="d6-dice gmroll gmroll-hide" name="rollg_dmg_soak_str" type="roll" value="/w gm &{template:red} {{name=Damage Soak(Strength only)}} {{Roll=[[(@{strength} -@{WoundMod} -1)d6cf0cs0 + 1d6!cf1cs6]]}}"><span class="redtxt">GM</span>S</button>	  
+					<button class="d6-dice" name="roll_dmg_soak_en" type="roll" value="&{template:red} {{name=Damage Soak(Physical)}} {{Roll=[[(@{strength} +@{armorPhDice} -1)d6cf0cs0 +@{armorPhPip} +1d6!cf1cs6]]}}">Physical</button>
+					<button class="d6-dice" name="roll_dmg_soak_ph" type="roll" value="&{template:red} {{name=Damage Soak(Energy)}} {{Roll=[[(@{strength} +@{armorEnDice} -1)d6cf0cs0 +@{armorEnPip} +1d6!cf1cs6]]}}">Energy</button>
+					<button class="d6-dice" name="roll_dmg_soak_str" type="roll" value="&{template:red} {{name=Damage Soak(Strength only)}} {{Roll=[[(@{strength} -1)d6cf0cs7 +1d6!cf1cs6]]}}">Str only</button>	  
+					<button class="d6-dice gmroll gmroll-hide" name="rollg_dmg_soak_en" type="roll" value="/w gm &{template:red} {{name=Damage Soak(Physical)}} {{Roll=[[(@{strength} +@{armorPhDice} -1)d6cf0cs0 + @{armorPhPip} + 1d6!cf1cs6]]}}"><span class="redtxt">GM</span>P</button>
+					<button class="d6-dice gmroll gmroll-hide" name="rollg_dmg_soak_ph" type="roll" value="/w gm &{template:red} {{name=Damage Soak(Energy)}} {{Roll=[[(@{strength} +@{armorEnDice} -1)d6cf0cs0 + @{armorEnPip} + 1d6!cf1cs6]]}}"><span class="redtxt">GM</span>E</button>
+					<button class="d6-dice gmroll gmroll-hide" name="rollg_dmg_soak_str" type="roll" value="/w gm &{template:red} {{name=Damage Soak(Strength only)}} {{Roll=[[(@{strength} -1)d6cf0cs0 + 1d6!cf1cs6]]}}"><span class="redtxt">GM</span>S</button>	  
 				</fieldset>
 		</div>
 		<div class="section force-hide"> <!--------------------------- Force -->
