SW5E:minor visual fixes

--- a/StarWars5E/StarWars5E_HTML.html
+++ b/StarWars5E/StarWars5E_HTML.html
@@ -3739,7 +3739,7 @@
                     </div>
                     <div class="row">
                         <input type="checkbox" name="attr_tech_operative" value="1">
-                        <span data-i18n="tech-operative-u">TECH OṔERATIVE</span>
+                        <span data-i18n="tech-operative-u">TECH OPERATIVE</span>
                     </div>
                     <div class="row title">
                         <span data-i18n="class-options-u">CLASS OPTIONS</span>
