--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -456,7 +456,19 @@
         <div class="box rot-level">
             <div class="rot-grid">
                 <div class="rot-box header"><h1 data-i18n="rot-p">ROT POINTS</h1></div>
-                <input class="input-number" type="number" name="attr_rot" value="0" min="0" title="@{rot}" />
+                <div class="dots">
+                    <input name="attr_rot" type="radio" value="0"/>
+                    <input name="attr_rot" type="radio" value="1" checked/><span></span>
+                    <input name="attr_rot" type="radio" value="2"/><span></span>
+                    <input name="attr_rot" type="radio" value="3"/><span></span>
+                    <input name="attr_rot" type="radio" value="4"/><span></span>
+                    <input name="attr_rot" type="radio" value="5"/><span></span>
+                    <input name="attr_rot" type="radio" value="6"/><span></span>
+                    <input name="attr_rot" type="radio" value="7"/><span></span>
+                    <input name="attr_rot" type="radio" value="8"/><span></span>
+                    <input name="attr_rot" type="radio" value="9"/><span></span>
+                    <input name="attr_rot" type="radio" value="10"/><span></span>
+                </div>
                 <button name="attr_rot" type="roll" value="[[@{rot}d6cs0cf1">y</button>
                 <input class="input-number" type="number" name="attr_rot_permenant" value="0" min="0" title="@{rot_permenant}" />
             </div>
@@ -1355,7 +1367,7 @@ on("clicked:dice_pool_clear", () => {
 /* set weapon dice pool */
 on("clicked:repeating_weapons:attack-roll", function() {
     console.log(">>> Change Detected: Weapon - button clicked <<<");
-    getAttrs(['repeating_weapons_weapon_skill', 'repeating_weapons_weapon_name' ,'repeating_weapons_weapon_bonus', 'repeating_weapons_weapon_damage', 'repeating_weapons_weapon_range', 'repeating_weapons_weapon_features', 'strength_total', 'agility_total', 'wits_total', 'empathy_total', 'marksmanship', 'melee'], function(values) {
+    getAttrs(['repeating_weapons_weapon_skill', 'repeating_weapons_weapon_name' ,'repeating_weapons_weapon_bonus', 'repeating_weapons_weapon_damage', 'repeating_weapons_weapon_range', 'repeating_weapons_weapon_features', 'strength', 'agility_total', 'wits', 'empathy', 'shoot', 'fight'], (values) => {
         
         const 	weapon_skill = parseInt(values.repeating_weapons_weapon_skill,10)||0, 
                 weapon_bonus = parseInt(values.repeating_weapons_weapon_bonus,10)||0,
@@ -1363,8 +1375,8 @@ on("clicked:repeating_weapons:attack-roll", function() {
                 weapon_damage = parseInt(values.repeating_weapons_weapon_damage,10)||0,
                 weapon_range = values.repeating_weapons_weapon_range,
                 weapon_features = values.repeating_weapons_weapon_features,
-                attribute = (weapon_skill === 0 ? parseInt(values.strength_total,10)||0 : parseInt(values.agility_total,10)||0 ),
-                skill = (weapon_skill === 0 ? parseInt(values.melee,10)||0 : parseInt(values.marksmanship,10)||0 );                    
+                attribute = (weapon_skill === 0 ? parseInt(values.strength,10)||0 : parseInt(values.agility,10)||0 ),
+                skill = (weapon_skill === 0 ? parseInt(values.fight,10)||0 : parseInt(values.shoot,10)||0 );                    
         setAttrs({
             attribute: attribute, 
             skill: skill,
